fix: Fixing kind of todolist.py

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -13,13 +13,16 @@ image_repositories = []
 [staging]
 [staging.deploy]
 [staging.deploy.parameters]
-stack_name = "todo-list-aws-staging"
+stack_name = "todo-list-aws"
 s3_bucket = "aws-sam-cli-managed-staging-samclisourcebucket-upt09go84tay"
 s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "Stage=\"staging\""
+parameter_overrides = "Stage=\"default\""
 image_repositories = []
+resolve_s3 = true
+confirm_changeset = true
+disable_rollback = true
 
 [production]
 [production.deploy]
