--- a/samconfig.toml
+++ b/samconfig.toml
@@ -31,4 +31,5 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
 image_repositories = []
+resolve_s3 = true
 
